--- a/application/package.json
+++ b/application/package.json
@@ -27,43 +27,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
+    "@angular/animations": "^8.1.1",
+    "@angular/cdk": "^8.0.2",
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/forms": "^8.1.1",
+    "@angular/material": "^8.0.2",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
+    "@angular/platform-server": "^8.1.1",
+    "@angular/router": "^8.1.1",
+    "@angular/service-worker": "^8.1.1",
+    "@nguniversal/express-engine": "^8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
+    "@ngx-translate/core": "^10.0.1",
+    "@ngx-translate/http-loader": "^3.0.1",
     "aws-serverless-express": "^3.2.0",
+    "core-js": "^2.5.4",
+    "cors": "~2.8.4",
     "firebase-admin": "^5.11.0",
     "firebase-functions": "^0.9.1",
-    "cors": "~2.8.4",
-    "@nguniversal/express-engine": "^6.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "rxjs": "^6.5.2",
     "typescript-collections": "^1.3.2",
-    "@angular/service-worker": "^6.0.0",
-    "@angular/platform-server": "^6.0.0",
-    "@angular/cdk": "^6.0.0",
-    "@angular/material": "^6.0.0",
     "webpack-cli": "2.1.2",
-    "@ngx-translate/core": "^10.0.1",
-    "@ngx-translate/http-loader": "^3.0.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
+    "@angular/compiler-cli": "^8.1.1",
     "@angular-devkit/build-angular": "~0.6.0",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.0",
-    "@angular/language-service": "^6.0.0",
+    "typescript": "~3.4.5",
+    "@angular/cli": "~8.1.1",
+    "@angular/language-service": "^8.1.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^5.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
