angular 8 migration of @angular/core and @angular/cli packages

--- a/application/tsconfig.json
+++ b/application/tsconfig.json
@@ -4,13 +4,16 @@
 //    "./node_modules/@angular-universal-serverless/external-module/release/src/externalComponent/external.module.d.ts"
 //  ],
   "compilerOptions": {
+    "downlevelIteration": true,
+    "importHelpers": true,
+    "module": "esnext",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
