--- a/application/package.json
+++ b/application/package.json
@@ -49,20 +49,21 @@
     "firebase-admin": "^5.11.0",
     "firebase-functions": "^0.9.1",
     "rxjs": "^6.5.2",
+    "tslib": "^1.9.0",
     "typescript-collections": "^1.3.2",
     "webpack-cli": "2.1.2",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^8.1.1",
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "~0.801.1",
     "typescript": "~3.4.5",
     "@angular/cli": "~8.1.1",
     "@angular/language-service": "^8.1.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.1.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
