fixed import of SwUpdateServerMock to make it compatible with angular v8

--- a/schematics/pwa/package.json
+++ b/schematics/pwa/package.json
@@ -2,7 +2,7 @@
   "author": "Maciej Treder <contact@maciejtreder.com>",
   "name": "@ng-toolkit/pwa",
   "main": "dist/index.js",
-  "version": "7.1.2",
+  "version": "7.1.2-avtest",
   "description": "Extension for @angular/pwa - adds server-side rendering fixes and update mechanism",
   "repository": {
     "type": "git",
