--- a/application/package.json
+++ b/application/package.json
@@ -51,19 +51,25 @@
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "typescript-collections": "^1.3.2",
-    "webpack-cli": "2.1.2",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^8.1.1",
-    "@angular-devkit/build-angular": "~0.801.1",
-    "typescript": "~3.4.5",
+    "@angular-devkit/build-angular": "^0.801.1",
     "@angular/cli": "~8.1.1",
+    "@angular/compiler-cli": "^8.1.1",
     "@angular/language-service": "^8.1.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
+    "cp-cli": "^1.1.0",
+    "cpy-cli": "^1.0.1",
+    "decompress": "^4.2.0",
+    "decompress-targz": "^4.1.1",
+    "express": "^4.15.2",
+    "http-server": "^0.10.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -71,26 +77,21 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "^5.7.0",
-    "serverless-apigw-binary": "^0.4.4",
-    "serverless-google-cloudfunctions": "^1.1.1",
-    "cp-cli": "^1.1.0",
-    "cpy-cli": "^1.0.1",
-    "decompress": "^4.2.0",
-    "decompress-targz": "^4.1.1",
-    "express": "^4.15.2",
-    "http-server": "^0.10.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "node-wget": "^0.4.2",
     "npm-run-all": "^4.1.2",
     "opencollective": "^1.0.3",
     "pre-commit": "^1.2.2",
+    "protractor": "~5.3.0",
     "reflect-metadata": "^0.1.10",
     "serverless": "1.26.1",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-google-cloudfunctions": "^1.1.1",
     "sinon": "^4.5.0",
-    "ts-loader": "4.2.0"
+    "ts-loader": "4.2.0",
+    "ts-node": "~5.0.1",
+    "tslint": "^5.7.0",
+    "typescript": "~3.4.5"
   },
   "collective": {
     "type": "opencollective",
